fix [#30025] Blender crash when using python to load a blend file and import an obj file