source/blender/makesrna/intern/rna_material.c
@@ -93,10 +93,14 @@ static void rna_Material_update(Main *UNUSED(bmain), Scene *scene, PointerRNA *p
 	Material *ma= ptr->id.data;
 
 	DAG_id_tag_update(&ma->id, 0);
-	if(scene->gm.matmode == GAME_MAT_GLSL)
-		WM_main_add_notifier(NC_MATERIAL|ND_SHADING_DRAW, ma);
-	else
-		WM_main_add_notifier(NC_MATERIAL|ND_SHADING, ma);
+	if (scene) {  /* can be NULL, see [#30025] */
+		if (scene->gm.matmode == GAME_MAT_GLSL) {
+			WM_main_add_notifier(NC_MATERIAL|ND_SHADING_DRAW, ma);
+		}
+		else {
+			WM_main_add_notifier(NC_MATERIAL|ND_SHADING, ma);
+		}
+	}
 }
 
 static void rna_Material_draw_update(Main *UNUSED(bmain), Scene *UNUSED(scene), PointerRNA *ptr)
